22-6: clean up